trying to make styling work on mobile despite bugs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,9 @@ body {
 }
 
 html {
-  margin: 0;
+  height: 100vh;
+  width: 100vh;
+  margin: auto;
   padding: 0;
   background: url('co2.jpg') no-repeat center center fixed;
   background-color: rgba(255, 255, 255, 0.616);
